test/fail/stdop-invalid.rnp
1.xyz();
---
 --> fail/stdop-invalid.rnp:1:3
  |
1 | 1.xyz();
  |   ^^^ xyz is not a valid operator
  |
